# quiper

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Package.resolved  Package.swift  README.md  build-app.py  build-app.sh  generate-screenshots.sh  implementation_plan.md  pyproject.toml  quick-run.sh  run-tests-with-coverage.sh  run.py  tests-with-coverage.sh  walkthrough.md
CodeEditorWeb/: package-lock.json  package.json
Quiper/: ActionScriptStorage.swift  ActionsSettingsView.swift  App.swift  AppearanceSettingsView.swift  CodeEditorContainer.swift  CodeEditorThirdPartyNotices.txt  CollapsibleSelector.swift  CollapsibleServiceSelector.swift  ConfigPortManager.swift  Constants.swift  CustomAction.swift  CustomActionShortcutDispatcher.swift  CustomCSSStorage.swift  DraggableView.swift  EditorDocumentSession.swift  EngineDigitShortcut.swift  FocusSelectorStorage.swift  HighlightedCodeContainer.swift  HoverIconButton.swift  HoverTextField.swift  Launcher.swift  Listener.swift  LoadingBorderView.swift  Main.swift  MainWindowController+Actions.swift  MainWindowController+Appearance.swift  MainWindowController+Downloads.swift  MainWindowController+HeaderVisibility.swift  MainWindowController+InputHandling.swift  MainWindowController+Selectors.swift  MainWindowController+SessionManagement.swift  MainWindowController+WebViewObservers.swift  MainWindowController.swift  MainWindowControlling.swift  MenuFactory.swift  NavigationButtonGroup.swift  NotificationDispatcher.swift  NotificationMetadata.swift  Notifications.swift  OverlayWindow.swift  (+34 more)
Quiper.xcodeproj/: project.pbxproj
(+242 files in other folders)
